# mini-projet-banc-de-test-pour-filtres

./: !_Start_TestBench.py  .gitignore  LICENSE  README.md  commitPourcent.ps1  main.py  notebook.ipynb  pyproject.toml  requirements.txt  test_Genfct.py  test_tek.py  testmes.py  testmultimetre.py
.github/workflows/: ci.yml
app/: commande.txt
artifacts/: MA_sorted.html  MA_sorted.json  top-gene-down.json  top-gene-up.json
assets/: gene-expression.tsv
src/interface/: Agilent_GenFct.py  tek_scope.py
testbench/: Agilent_GenFct.py  __init__.py  __main__.py  data_treatement.py  filtermathRDG.py  mesure.py  siglentmultimeter.py  tek_scope.py  usr_Interface.py
testbench/interface/: Agilent_GenFct.py  Siglent_PSU.py  __init__.py  __main__.py  data_treatement.py  filtermathRDG.py  mesure.py  siglent-multimeter.py  siglentmultimeter.py  tek_scope.py  usr_Interface.py
