[tool.poetry]
name = "testbench"
version = "0.1.0"
description = ""
authors = ["rynerd <martin.luthi@heig-vd.ch>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pyvisa = "^1.14.1"
pyvisa-py = "^0.7.2"
wxpython = "^4.2.2"
packaging = "^24.2"

[tool.poetry.scripts]
format = "black ."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
